[tool.poetry]
name = "reflexion-agent"
version = "0.1.0"
description = ""
authors = ["BOUJBAIR OUSSAMAE <93010609+Boujbair@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
python-dotenv = "^1.0.1"
black = "^24.8.0"
isort = "^5.13.2"
langchain = "^0.3.0"
langchain-openai = "^0.2.0"
langgraph = "^0.2.22"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
